--- a/story.html
+++ b/story.html
@@ -12,15 +12,16 @@ title: Our Story
 
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h3 class="panel-title">Favorite thing about The Bride</h3>
+        <h3 class="panel-title">Favorite thing about The Groom</h3>
       </div>
       <div class="panel-body">
-        Her long, beautiful red hair. (: Also, I love her ability to create something out of nothing with her art. I can talk to her about anything, everything, and nothing in particular for hours on end. She listens and understands me, and makes me feel loved. And I love that about her.
+        <p>"He's very self-motivated, and I really admire (and envy) that. If he wants something, he'll get it (as I have experienced firsthand...). If he wants to learn how to do something, he'll teach himself. He's very smart, and good at almost everything he does. I also most definitely love his cooking. ;)" <br>- The Bride</p>
       </div>
     </div>
 
     <div class="event">
       <h3>First Met</h3>
+      <p>Oklahoma Christian University<br><span class="glyphicon glyphicon-calendar"></span> October 1, 2012</p>
       <div class="text-left">
         <p>I was sitting in a practice session for the ACM Programming Competition with my other teammates, Kyler and Silas, and the other competition participants. Professor Harbert walked in with a timid girl with stunning red hair and introduced her to us as someone interested in the competition. I did not catch her name. We continued to work quietly until my team was stumped on a problem, at which time we asked the room for help. The timid girl (still nameless) had figured it out, and I was very impressed! After the practice was over and we went our separate ways, I was determined to find out who she was and, as I told Kyler that same day, date her.</p>
         <p>A few weeks passed and the competition loomed closer. Our team mentor, Professor Leftwich, sent out an email asking for individuals to reply back with their cell numbers, for his record. Thinking I was clever, I used "Reply All" instead of simply "Reply" in hopes that others, including the red-haired girl, would do the same. Unfortunately for me, while others did do the same she did not and I was left without her phone number even still. One good thing did come from this email. Professor Leftwich sent it to everyone coming to the competition and I was able to deduce that her name was Tanya Thompson.</p>
@@ -42,6 +43,7 @@ title: Our Story
     </div>
     <div class="event">
       <h3>First Date</h3>
+      <p>Johnny Carino's Italian Restaurant<br><span class="glyphicon glyphicon-calendar"></span> February 14, 2013</p>
       <div class="text-left">
         <p>We went to Johnny Carino's on N. May and Memorial. I picked her up at 7. I was wearing nice slacks and a button down shirt with a tie, she was wearing a dress. She looked great. The food was phenomenal and we stayed at the restaurant for at least two hours after we finished our meal, just talking and enjoying each other's company. This date is still my favorite date with Tanya, ever. We've been on many dates since, and one has yet to top this one. I don't remember what we talked about the whole night, but I do have one distinct memory of doodling on a napkin some code, some pokemon, and some dice.</p>
         <p>After the date and back at OC, I again breached the topic of a relationship with Tanya and again I was shut down. My reasoning was something along the lines of "We've just had a wonderful date, why not have many more?" Impeccable logic, I know, but still not enough to sway her, yet.</p>
@@ -59,6 +61,7 @@ title: Our Story
     </div>
     <div class="event">
       <h3>Proposal</h3>
+      <p>Hafer Park<br><span class="glyphicon glyphicon-calendar"></span> April 1, 2015</p>
       <div class="text-left">
         <p>The date was set. The ring was bought. Her parents' blessing was given. Now I just had to plan and execute. Easier said than done. By moving my date up to April, I had significantly lessened my planning time and couldn't do the D&ampD proposal anymore. I had to come up with a new plan.</p>
         <p>Hafer Park in Edmond is absolutely beautiful in the spring. Tanya and I had walked around its trails a few times and I knew it would be a great place to propose. I came up with the idea of a picnic date, during which I would propose. I gathered the supplies: a folding table and chairs from Grandma, an ice chest and sandwich supplies from Wal-Mart, place cards that said "Mr. Murrow" and "Future Mrs. Murrow" on them. I went out to the park after classes, around 4 PM, on the day of the proposal and set everything up. I recruited my roommates to stand guard over the setup in the park and make sure that nobody disturbed it. I had a Jon assigned to taking pictures (covertly, of course) and a Drew assigned to taking video (also covertly) as we approached the table. They had both been briefed on the proposal plan using the diagram (I'm an engineer, give me a break) I drew.</p>
@@ -76,10 +79,10 @@ title: Our Story
 
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h3 class="panel-title">Favorite thing about The Groom</h3>
+        <h3 class="panel-title">Favorite thing about The Bride</h3>
       </div>
       <div class="panel-body">
-        <p>He's very self-motivated, and I really admire (and envy) that. If he wants something, he'll get it (as I have experienced firsthand...). If he wants to learn how to do something, he'll teach himself. He's very smart, and good at almost everything he does. I also most definitely love his cooking. ;)</p>
+        <p>"Her long, beautiful red hair. (: Also, I love her ability to create something out of nothing with her art. I can talk to her about anything, everything, and nothing in particular for hours on end. She listens and understands me, and makes me feel loved. And I love that about her."<br>- The Groom</p>
       </div>
     </div>
 
@@ -104,6 +107,8 @@ title: Our Story
           <p>In the following months, we texted constantly. After the competition he asked if I wanted to sit by him and his friends in our Programming 1 class, so I did. We started working on assignments together when partners were allowed, and got to see each other every other day.</p>
           <p>I remember one instance about a month or so later; he messaged me and asked for help on an assignment. I tried to send my code, but he still couldn't get it to work and wanted me to come look. It made me feel good to be asked for help (only to find out A YEAR later that I was TOTALLY being played). I met him under the big pavilion in the middle of campus where there were tables and chairs.</p>
           <p>We spent an hour or more trying to fix his code. I couldn't figure out what was wrong with it, and suggested he email the professor. While we waited for a possible response (which, funnily enough, would never come), we started watching youtube videos and talking about other things. I had fun, but eventually we had to go back to our dorms for curfew. We hadn't hung out outside of class yet, and this was a new step in our friendship.</p>
+          <p>Over Thanksgiving break, I finally found out. Corbin messaged me, confessing his feelings for me. He told me that he got Trans-Siberian Orchestra tickets and hoped we could go together for our first date. I didn't know what to say. I didn't have romantic feelings for him or want to be in a relationship at the time, but was afraid of upsetting him. I told him as much, but said I would be glad to go as friends if he didn't have anyone else to invite. We did end up going and it was a lot of fun.</p>
+          <p>Over the next few months, he continued to remind me of his feelings and hoped I would be ready to date. At first it was a little embarrassing and awkward, but it eventually became a regular thing. Funny remarks or jokes about dating him turned into more serious and desperate requests to give him a chance. Finally he asked me on a date for Valentine's day, and I said yes.</p>
         </div>
     </div>
     <div class="event">
