--- a/story.html
+++ b/story.html
@@ -115,7 +115,9 @@ title: Our Story
       <h3>First Date</h3>
       <p>Johnny Carino's Italian Restaurant<br><span class="glyphicon glyphicon-calendar"></span> February 14, 2013</p>
       <div class="text-left">
-        <p>We went to Johnny Carino's, an Italian restaurant I had never been to. It felt a little awkward at first, I think because the other small part of me knew this was totally a date. Soon after we were seated though, we (I, at least) relaxed and were soon having fun chatting about our days and how classes went. Eventually the food came out, it was great. Even after we got our ticket, we continued to sit and talk for another hour or so. We doodled on the reciepts, spelling our names in hex and trying to draw Pokemon from memory. Finally we left, and </p>
+        <p>We went to Johnny Carino's, an Italian restaurant I had never been to. I was nervous at first; would this be weird? Would he act differently? Soon after we were seated though, I relaxed and we were soon having fun chatting about our days and how classes went. Eventually the food came out, it was great. Even after we got our ticket, we continued to sit and talk for another hour or so. We doodled on the reciepts, spelling our names in hex and trying to draw Pokemon from memory.</p>
+        <p>We left the restaurant, and nervousness sank in again. He brought up dating, saying that night was an example of how our relationship could be. I was still hesitant. I was unsure of my feelings for him. Being the conservative I am, I was afraid of change. What would happen to our friendship? If the relationship didn't work out, could we ever go back to being friends? But if I said no, would he want to stop being friends anyways?</p>
+        <p>I told him I still wasn't ready for that step yet. Thankfully for me, he stuck around and continued trying.</p>
       </div>
     </div>
     <div class="event">
