--- a/story.html
+++ b/story.html
@@ -116,14 +116,13 @@ title: Our Story
       <p>Johnny Carino's Italian Restaurant<br><span class="glyphicon glyphicon-calendar"></span> February 14, 2013</p>
       <div class="text-left">
         <p>We went to Johnny Carino's, an Italian restaurant I had never been to. I was nervous at first. Would this be weird? Would he act differently? Shortly after we were seated, I relaxed and we were soon having fun chatting about our days and how classes went. Eventually the food came out, it was great. Even after we got our ticket, we continued to sit and talk for another hour or so. We doodled on the reciepts, spelling our names in hex and trying to draw Pokemon from memory.</p>
-        <p>We left the restaurant, and nervousness sank in again. He brought up dating, saying that night was an example of how our relationship could be. I was still hesitant; I was unsure of my feelings for him. Being the conservative I am, I was afraid of change. What would happen to our friendship? If the relationship didn't work out, could we ever go back to being friends? But if I said no, would he want to stop being friends anyways?</p>
-        <p>I told him I still wasn't ready for that step yet. Thankfully for me, he stuck around and continued trying.</p>
+        <p>We left the restaurant, and nervousness sank in again. He brought up dating, saying that night was an example of how our relationship could be. I was still hesitant. I told him I still wasn't ready for that step yet. Thankfully for me, he stuck around and continued trying.</p>
       </div>
     </div>
     <div class="event">
       <h3>From First Date to Proposal</h3>
       <div class="text-left">
-        <p></p>
+        <p>In the two months following the date, Corbin was as persistent as ever. Finally on April 1, 2013 the stars aligned and I could say yes to being in a relationship with him. He was thrilled, to say the least. I was excited, but that was largely obscured by being nervous. I would get attention, now that we were official. People might think about me, or worse <em>look at me</em>. Needless to say, the world didn't end and I was perfectly alright. In fact, I was much better.</p>
       </div>
     </div>
     <div class="event">
