--- a/story.html
+++ b/story.html
@@ -123,6 +123,9 @@ title: Our Story
       <h3>From First Date to Proposal</h3>
       <div class="text-left">
         <p>In the two months following the date, Corbin was as persistent as ever. Finally on April 1, 2013 the stars aligned and I could say yes to being in a relationship with him. He was thrilled, to say the least. I was excited, but that was largely obscured by being nervous. I would get attention, now that we were official. People might think about me, or worse <em>look at me</em>. Needless to say, the world didn't end and I was perfectly alright. In fact, I was much better.</p>
+        <p>We had a blast. We already shared some interests and hobbies, but we also introduced each other to more interests and hobbies. When I met him he hadn't seen Lord of the Rings all the way through, and it <em><strong>had</strong></em> to be remedied. We had more than one Lord of the Rings marathon, througout which Corbin had to endure my endless trivia updates about the movie. We also joined a school group that was playing Pathfinder (similar to D&D). I'd played D&D growing up and loved it, and I was excited for him to experience that as well.</p>
+        <p>Corbin introduced me to the world of board games, which was something I never realized I was missing out on. I was accepted into the group that was regularly invited to the engineering professors' houses for games, and Corbin and I attended many a game night together.</p>
+        <p>Over the summers, I got to go on lake trips with his family.  </p>
       </div>
     </div>
     <div class="event">
