Added proposal video

--- a/story.html
+++ b/story.html
@@ -143,3 +143,11 @@ title: Our Story
     </div>
   </div>
 </div>
+<div class="row">
+  <div class="col-md-12">
+    <!-- 16:9 aspect ratio -->
+    <div class="embed-responsive embed-responsive-16by9">
+      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/FAmICrYaEPk" frameborder="0" allowfullscreen></iframe>
+    </div>
+  </div>
+</div>
