Add back to top button

--- a/story.html
+++ b/story.html
@@ -151,3 +151,4 @@ title: Our Story
     </div>
   </div>
 </div>
+<a href="#" class="btn btn-default back-to-top">Back to Top <span class="glyphicon glyphicon-arrow-up"></span></a>
