Fixed navbar background and cover page spacing

--- a/story.html
+++ b/story.html
@@ -12,7 +12,7 @@ title: Our Story
 
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h3 class="panel-title">Favorite thing about The Groom</h3>
+        <h3 class="panel-title">Her Favorite Thing About Him</h3>
       </div>
       <div class="panel-body">
         <p>"He's very self-motivated, and I really admire (and envy) that. If he wants something, he'll get it (as I have experienced firsthand...). If he wants to learn how to do something, he'll teach himself. He's very smart, and good at almost everything he does. I also most definitely love his cooking. ;)" <br>- The Bride</p>
@@ -79,7 +79,7 @@ title: Our Story
 
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h3 class="panel-title">Favorite thing about The Bride</h3>
+        <h3 class="panel-title">His Favorite Thing About Her</h3>
       </div>
       <div class="panel-body">
         <p>"Her long, beautiful red hair. (: Also, I love her ability to create something out of nothing with her art. I can talk to her about anything, everything, and nothing in particular for hours on end. She listens and understands me, and makes me feel loved. And I love that about her."<br>- The Groom</p>
