--- a/info.html
+++ b/info.html
@@ -2,7 +2,7 @@
 layout: default
 title: Information
 ---
-<div class="row test">
+<div class="row text-center">
   <div class="col-md-12">
     <h2>Time &amp; Place</h2>
     <div class="row">
