--- a/rsvp.html
+++ b/rsvp.html
@@ -3,7 +3,7 @@ layout: default
 title: RSVP
 ---
 
-<div class="row test">
+<div class="row text-center">
   <div class="row">
     <div class="col-sm-12">
       <p>Please let us know to expect you using the form below or by calling 405-265-8854</p>
