--- a/rsvp.html
+++ b/rsvp.html
@@ -88,26 +88,11 @@ title: RSVP
 
           <div class="form-group">
             <div class="col-sm-offset-4 col-sm-4">
-              <button id="submit-rsvp" type="button" class="btn btn-default btn-lg" >Submit RSVP</button> <!--onclick="sendTheMail(); return false;"-->
+              <button id="submit-rsvp" type="button" class="btn btn-default btn-lg" onClick="window.location.reload();">Submit RSVP</button> <!--onclick="sendTheMail(); return false;"-->
+              <button id="delete-rsvp" type="button" class="btn btn-default btn-lg delete-btn hidden" onClick="window.location.reload();">Delete RSVP</button> <!--onclick="sendTheMail(); return false;"-->
             </div>
           </div>
 
-        </form>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="row test">
-  <div class="row">
-    <div class="col-sm-12">
-      <div class="delete-form" style="display: none;">
-        <form id="rsvp-form" class="form-horizontal">
-          <div class="form-group">
-            <div class="col-sm-offset-4 col-sm-6">
-              <button id="delete-rsvp" type="button" class="btn btn-default" >Delete RSVP</button> <!--onclick="sendTheMail(); return false;"-->
-            </div>
-          </div>
         </form>
       </div>
     </div>
