Doing more laundry

--- a/rsvp.html
+++ b/rsvp.html
@@ -89,7 +89,7 @@ title: RSVP
           <div class="form-group">
             <div class="col-sm-offset-4 col-sm-4">
               <button id="submit-rsvp" type="button" class="btn btn-default btn-lg" onClick="window.location.reload();">Submit RSVP</button> <!--onclick="sendTheMail(); return false;"-->
-              <button id="delete-rsvp" type="button" class="btn btn-default btn-lg delete-btn hidden" onClick="window.location.reload();">Delete RSVP</button> <!--onclick="sendTheMail(); return false;"-->
+              <button id="delete-rsvp" type="button" class="btn btn-danger btn-lg delete-btn hidden" onClick="window.location.reload();">Delete RSVP</button> <!--onclick="sendTheMail(); return false;"-->
             </div>
           </div>
 
