--- a/rsvp.html
+++ b/rsvp.html
@@ -88,8 +88,8 @@ title: RSVP
 
           <div class="form-group">
             <div class="col-sm-offset-4 col-sm-4">
-              <button id="submit-rsvp" type="button" class="btn btn-default btn-lg" onClick="window.location.reload();">Submit RSVP</button> <!--onclick="sendTheMail(); return false;"-->
-              <button id="delete-rsvp" type="button" class="btn btn-danger btn-lg delete-btn hidden" onClick="window.location.reload();">Delete RSVP</button> <!--onclick="sendTheMail(); return false;"-->
+              <button id="submit-rsvp" type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#success-modal">Submit RSVP</button> <!--onclick="sendTheMail(); return false;"-->
+              <button id="delete-btn" type="button" class="btn btn-danger btn-delete btn-lg hidden" data-toggle="modal" data-target="#delete-modal">Delete RSVP</button> <!--onclick="sendTheMail(); return false;"-->
             </div>
           </div>
 
@@ -98,3 +98,5 @@ title: RSVP
     </div>
   </div>
 </div>
+
+{% include rsvp-modals.html %}
