Info page changes

--- a/info.html
+++ b/info.html
@@ -3,20 +3,23 @@ layout: default
 title: Information
 ---
 <div class="row text-center">
-  <div class="col-md-12">
+  <div class="col-md-6">
+    <img src="{{baseurl}}/images/naza.jpg" class="img-responsive">
+  </div>
+  <div class="col-md-6">
     <h2>Time &amp; Place</h2>
     <div class="row">
       <div class="col-sm-12">
         <div class="form-horizontal">
           <div class="form-group">
-            <label class="control-label col-sm-5">When</label>
-            <div class="col-sm-7">
+            <label class="control-label col-sm-2">When</label>
+            <div class="col-sm-10">
               <p class="text-fluid">2:00pm Saturday, 30 April 2016</p>
             </div>
           </div>
           <div class="form-group">
-            <label class="control-label col-sm-5">Where</label>
-            <div class="col-sm-7">
+            <label class="control-label col-sm-2">Where</label>
+            <div class="col-sm-10">
               <p class="text-fluid"><strong>Bethany First Church of the Nazarene</strong>
               <a href="https://www.google.com/maps/place/Bethany+First+Church+of+the+Nazarene/@35.513207,-97.631599,17z/data=!3m1!4b1!4m2!3m1!1s0x0:0xd7a98e204472632" target="_blank">
                 <span class="glyphicon glyphicon-map-marker" data-toggle="tooltip" data-placement="top" title="Open in Google Maps"></span></a>
@@ -28,15 +31,15 @@ title: Information
             </div>
           </div>
           <div class="form-group">
-            <label class="control-label col-sm-5">Reception</label>
-            <div class="col-sm-7">
+            <label class="control-label col-sm-2">Reception</label>
+            <div class="col-sm-10">
               <p class="text-fluid">The reception will be held in the atrium after the ceremony and is open to all guests. There will be food, and of course - cake!</p>
             </div>
           </div>
         </div>
       </div>
     </div>
-    {% include map.html %}
   </div>
 </div>
+{% include map.html %}
 {% include directions-modal.html %}
