--- a/registry.html
+++ b/registry.html
@@ -11,17 +11,17 @@ title: Registry
             start our lives together. So, as an alternative, we'd really appreciate
             it if you would check out our Honeyfund page. There, you can help send
             us on the honeymoon of our dreams.</p>
-          <p>On our Honeyfund page we have broken down our trip expenses into cost 
-            effective single gifts. If you choose to give us a Honeyfund gift, simply 
-            use the "Give..." dropdown on the item you wish to pledge for and select the 
-            number of gifts you wish to give. This will take you to a payment page. 
-            Our Honeyfund does accept credit or debit card purchases via the secure online
-            payment platform WePay. If you do not feel secure filling in your credit card 
+          <p>On our Honeyfund page we have broken down our trip expenses into cost
+            effective single gifts. If you choose to give us a Honeyfund gift, simply
+            use the "Give..." dropdown on the item you wish to pledge for and select the
+            number of gifts you wish to give. This will take you to a payment page.</p>
+            <p>Our Honeyfund does accept credit or debit card purchases via the secure online
+            payment platform WePay. If you do not feel secure filling in your credit card
             information, we totally understand. You can still pledge cash or a check.
-            Simply pledge as above and on the payment screen, click the "More options" link 
+            Simply pledge as above and on the payment screen, click the "More options" link
             next to "Pay with Credit Card". This will switch it to cash or check mode. You can
-            then enter your name and email to reserve the gift as well as leave us a message!
-            Honeyfund will then generate a gift certificate that you can mail (along with 
+            then enter your name and email to reserve the gift as well as leave us a message!</p>
+            <p>Honeyfund will then generate a gift certificate that you can mail (along with
             cash or check) to us, or bring to our wedding if you come (we hope you do!).
             You can also leave us a question, comment, or advice for married life on our
             Honeyfund page in the Guest book.</p>
