Added things to frustrate Tanya

--- a/info.html
+++ b/info.html
@@ -33,7 +33,7 @@ title: Information
           <div class="form-group">
             <label class="control-label col-sm-2">Reception</label>
             <div class="col-sm-10">
-              <p class="text-fluid">The reception will be held in the atrium after the ceremony and is open to all guests. There will be food, and of course - cake!</p>
+              <p class="text-fluid">The reception will be held in the atrium after the ceremony and is open to all guests. There will be food, and of course - cake! We ask that you <a href="{{baseurl}}/rsvp">RSVP</a> for the reception so that can be sure to have enough food.</p>
             </div>
           </div>
         </div>
