--- a/rsvp.html
+++ b/rsvp.html
@@ -38,9 +38,8 @@ title: RSVP
           <div class="collapse" id="confirm-form">
 
             <div class="form-group">
-              <label class="col-sm-4 control-label">Number Attending the Wedding</label> <!-- <br><small>(including yourself)</small> -->
+              <label class="col-sm-4 control-label">Number Attending the Wedding</label>
               <div class="col-sm-6">
-                <!--<input type="number" class="form-control" name="quantity" min="1" max="10" placeholder="Number attending">-->
                 <div class="input-group">
                   <span class="input-group-btn">
                       <button type="button" class="btn btn-default btn-number" disabled="disabled" data-type="minus" data-field="quant[1]">
@@ -88,7 +87,7 @@ title: RSVP
 
           <div class="form-group">
             <div class="col-sm-offset-4 col-sm-4">
-              <button id="submit-rsvp" type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#success-modal">Submit RSVP</button> <!--onclick="sendTheMail(); return false;"-->
+              <button id="submit-rsvp" type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#success-modal" disabled>Submit RSVP</button> <!--onclick="sendTheMail(); return false;"-->
               <button id="delete-btn" type="button" class="btn btn-danger btn-delete btn-lg hidden" data-toggle="modal" data-target="#delete-modal">Delete RSVP</button> <!--onclick="sendTheMail(); return false;"-->
             </div>
           </div>
