--- a/registry.html
+++ b/registry.html
@@ -4,8 +4,8 @@ title: Registry
 ---
 <div class="row test">
   <div class="col-md-12">
-      <div class="row">
-        <div class="col-md-offset-3 col-md-6">
+      <!-- <div class="row">
+        <div class="col-md-offset-3 col-md-6"> -->
           <!--<h3>Honeyfund</h3>-->
           <p>We are so blessed to already have a lot of the items we'll need to
             start our lives together. So, as an alternative, we'd really appreciate
@@ -33,11 +33,11 @@ title: Registry
       </div>
       <div class="row">
         <div class="col-md-6">
-          <a href="http://www.honeyfund.com/wedding/murrowthompson2016"><img class="img-responsive registry-img" width="50%" src="{{baseurl}}/images/honeyfund-logo_white.png" /></a>
+          <a href="http://www.honeyfund.com/wedding/murrowthompson2016"><img class="img-responsive registry-img" src="{{baseurl}}/images/honeyfund-logo_white.png" /></a>
         </div>
         <div class="col-md-6">
-          <a href="https://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?registryId=542750352&eventType=Wedding&pwsurl"><img class="img-responsive registry-img" width="50%" src="{{baseurl}}/images/bed-bath_white.png" /></a>
+          <a href="https://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?registryId=542750352&eventType=Wedding&pwsurl"><img class="img-responsive registry-img" src="{{baseurl}}/images/bed-bath_white.png" /></a>
         </div>
       </div>
-  </div>
-</div>
+  <!-- </div>
+</div> -->
