--- a/rsvp.html
+++ b/rsvp.html
@@ -57,9 +57,8 @@ title: RSVP
             </div>
 
             <div class="form-group">
-              <label class="col-sm-4 control-label">Number Attending the Reception</label> <!-- <br><small>(including yourself)</small> -->
+              <label class="col-sm-4 control-label">Number Attending the Reception</label>
               <div class="col-sm-6">
-                <!--<input type="number" class="form-control" name="quantity" min="1" max="10" placeholder="Number attending">-->
                 <div class="input-group">
                   <span class="input-group-btn">
                       <button type="button" class="btn btn-default btn-number" disabled="disabled" data-type="minus" data-field="quant[2]">
