--- a/rsvp.html
+++ b/rsvp.html
@@ -87,7 +87,7 @@ title: RSVP
           <div class="form-group">
             <div class="col-sm-offset-4 col-sm-4">
               <button id="submit-rsvp" type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#success-modal" disabled>Submit RSVP</button> <!--onclick="sendTheMail(); return false;"-->
-              <button id="delete-btn" type="button" class="btn btn-danger btn-delete btn-lg hidden" data-toggle="modal" data-target="#delete-modal">Delete RSVP</button> <!--onclick="sendTheMail(); return false;"-->
+              <button id="delete-rsvp" type="button" class="btn btn-danger btn-delete btn-lg hidden" data-toggle="modal" data-target="#delete-modal">Delete RSVP</button> <!--onclick="sendTheMail(); return false;"-->
             </div>
           </div>
 
