--- a/registry.html
+++ b/registry.html
@@ -16,7 +16,7 @@ title: Registry
             use the "Give..." dropdown on the item you wish to pledge for and select the
             number of gifts you wish to give. This will take you to a payment page.</p>
             <p>Our Honeyfund does accept credit or debit card purchases via the secure online
-            payment platform WePay. If you do not feel secure filling in your credit card
+            payment platform PayPal. If you do not feel secure filling in your credit card
             information, we totally understand. You can still pledge cash or a check.
             Simply pledge as above and on the payment screen, click the "More options" link
             next to "Pay with Credit Card". This will switch it to cash or check mode. You can
