Take out italics on RSVP by date

--- a/rsvp.html
+++ b/rsvp.html
@@ -6,7 +6,7 @@ title: RSVP
 <div class="row text-center">
   <div class="row">
     <div class="col-sm-12">
-      <p>Please let us know to expect you using the form below or by calling 405-265-8854. <strong><em>We ask that you RSVP no later than 1 April 2016.</em></strong> The reception is open to all guests; let us know you're coming so we are sure to have enough food!</p>
+      <p>Please let us know to expect you using the form below or by calling 405-265-8854. <strong>We ask that you RSVP no later than 1 April 2016.</strong> The reception is open to all guests; let us know you're coming so we are sure to have enough food!</p>
       <p>If you need to update your RSVP at any time you can return to this page to update your info or give us a call.</p>
       <br />
       <div class="blank-form">
