--- a/rsvp.html
+++ b/rsvp.html
@@ -5,12 +5,14 @@ title: RSVP
 
 <div class="row text-center">
   <div class="row">
-    <div class="col-sm-12">
-      <p>Please let us know to expect you using the form below or by calling 405-265-8854. <strong>We ask that you RSVP no later than 10 April 2016.</strong> Our invitations mistakenly say March 1st - please do still RSVP!</p>
+    <div class="col-lg-offset-3 col-lg-6 col-sm-12">
+      <p>The RSVP form is now closed!</p>
+      <p>But never fear! If you still want to let us know whether you're coming or not, or need to change your RSVP, you can still do so by calling 405-265-8854. If you haven't RSVP'd but want to come, it's ok - come anyways! We'll be happy to have you there.</p>
+      <!-- <p>Please let us know to expect you using the form below or by calling 405-265-8854. <strong>We ask that you RSVP no later than 10 April 2016.</strong> Our invitations mistakenly say March 1st - please do still RSVP!</p>
       <p>The reception is open to all guests; let us know you're coming so we are sure to have enough food!</p>
-      <p>If you need to update your RSVP at any time you can return to this page to update your info or give us a call.</p>
-      <br />
-      <div class="blank-form">
+      <p>If you need to update your RSVP at any time you can return to this page to update your info or give us a call.</p> -->
+      <!-- <br /> -->
+      <!-- <div class="blank-form">
         <form id="rsvp-form" class="form-horizontal">
 
           <div id="fname-group" class="form-group">
@@ -87,13 +89,13 @@ title: RSVP
 
           <div class="form-group">
             <div class="col-sm-offset-4 col-sm-4">
-              <button id="submit-rsvp" type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#success-modal" disabled>Submit RSVP</button> <!--onclick="sendTheMail(); return false;"-->
-              <button id="delete-rsvp" type="button" class="btn btn-danger btn-delete btn-lg hidden" data-toggle="modal" data-target="#delete-modal">Delete RSVP</button> <!--onclick="sendTheMail(); return false;"-->
+              <button id="submit-rsvp" type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#success-modal" disabled>Submit RSVP</button>
+              <button id="delete-rsvp" type="button" class="btn btn-danger btn-delete btn-lg hidden" data-toggle="modal" data-target="#delete-modal">Delete RSVP</button>
             </div>
           </div>
 
         </form>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
